# minilogue-xd_sdk_bootstrap

./: .gitignore  CMakeLists.txt  KorgHelpers.cmake  README.md  build.sh
fx/: CMakeLists.txt
fx/common/: audio_processor.cpp  audio_processor.h  mod_audio_processor.cpp  mod_audio_processor.h  time_audio_processor.cpp  time_audio_processor.h
fx/common/dsp/: butter_filter.cpp  butter_filter.h  delay.cpp  delay.h  direct_filter.cpp  direct_filter.h  panner.cpp  peaking_filter.cpp  peaking_filter.h  sine_lfo.cpp  sine_lfo.h  stereo_panner.cpp  stereo_panner.h
fx/common/ld/: user.ld
fx/common/processors/: mod_audio_processor.cpp  mod_audio_processor.h  time_audio_processor.cpp  time_audio_processor.h
fx/common/utilities/: memory_pool.cpp  memory_pool.h
fx/orbit_delay/: CMakeLists.txt  main.cpp  orbit_delay.cpp  orbit_delay.h  orbit_filter.cpp  orbit_filter.h
fx/waveshaper/: CMakeLists.txt  main.cpp  waveshaper.cpp  waveshaper.h
tests/: CMakeLists.txt  filter_tests.cpp
vlsdk/: vlsdk.h
vlsdk/vlsdk_dsp/: butter_filter.cpp  butter_filter.h  delay.cpp  direct_filter.cpp  direct_filter.h  panner.cpp  panner.h  peaking_filter.cpp  peaking_filter.h  sine_lfo.cpp
vlsdk/vlsdk_processors/: mod_audio_processor.cpp  mod_audio_processor.h  time_audio_processor.cpp
vlsdk/vlsdk_utilities/: memory_pool.cpp
